--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">CGPA_Calculator_MU_Result</string>
+    <string name="app_name">MU GPA Calculator</string>
 </resources>
